# Assistente-Clinica-RAG

./: pyproject.toml
app/agente/: documento_corte.py  embeddings_vectorstore.py  main02.py
banco_dados/: chroma.sqlite3
