[project]
name = "agente-clinica-rag"
version = "0.1.0"
description = "Agente com estrutura RAG para atendimento Clinica"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langchain-openrouter>=0.2.3",
    "openrouter>=0.9.1",
    "pypdf>=6.10.2",
]
